Working on Profiles views.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.9",
+    "flowbite-typography": "^1.0.3",
     "tailwindcss": "^3.2.7"
   }
 }
