Nested profiles with seniorities

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,7 +6,8 @@ COPY package*.json /app/frontend/
 RUN mkdir -p /app/frontend/node_modules
 RUN chown node:node /app/frontend/node_modules
 RUN npm install
-
+#FROM python:3
+#RUN pip install drf-writable-nested
 COPY . /app/frontend/
 
 CMD ["npm", "start"]
