--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "i18next": "^22.4.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-i18next": "^12.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
