--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,14 @@
 asgiref==3.6.0
 backports.zoneinfo==0.2.1
+certifi==2022.12.7
+charset-normalizer==3.1.0
 Django==4.1.7
 django-cors-headers==3.14.0
 djangorestframework==3.14.0
+idna==3.4
+Pillow==9.5.0
 psycopg2-binary==2.9.5
 pytz==2022.7.1
-sqlparse==0.4.3
 requests==2.28.2
+sqlparse==0.4.3
+urllib3==1.26.15
