--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,9 +5,11 @@ charset-normalizer==3.1.0
 Django==4.1.7
 django-cors-headers==3.14.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 idna==3.4
 Pillow==9.5.0
 psycopg2-binary==2.9.5
+PyJWT==2.6.0
 pytz==2022.7.1
 requests==2.28.2
 sqlparse==0.4.3
