--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,16 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "i18next": "^22.4.13",
+    "dayjs": "^1.11.6",
     "react": "^18.2.0",
+    "react-date-picker": "^10.0.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-i18next": "^12.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-tailwindcss-datepicker": "^1.6.0",
+    "tailwind-datepicker-react": "^1.3.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
