--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,11 +6,14 @@ Django==4.1.7
 django-cors-headers==3.14.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+Faker==18.6.2
 idna==3.4
 Pillow==9.5.0
 psycopg2-binary==2.9.5
 PyJWT==2.6.0
+python-dateutil==2.8.2
 pytz==2022.7.1
 requests==2.28.2
+six==1.16.0
 sqlparse==0.4.3
 urllib3==1.26.15
