--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,11 @@
     "react-tailwindcss-datepicker": "^1.6.0",
     "tailwind-datepicker-react": "^1.3.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@types/node": "^18.15.9",
+    "flowbite-typography": "^1.0.3",
+    "tailwind-scrollbar": "^3.0.0",
+    "tailwindcss": "^3.2.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,11 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/node": "^18.15.9",
-    "flowbite-typography": "^1.0.3",
-    "tailwind-scrollbar": "^3.0.0",
-    "tailwindcss": "^3.2.7"
   }
 }
