--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "tailwindcss": "^3.2.7"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=80 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
