--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/node": "^18.15.9",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
+    "faker": "^6.6.6",
+    "flowbite-typography": "^1.0.3",
     "i18next": "^22.4.13",
     "react": "^18.2.0",
     "react-date-picker": "^10.0.3",
@@ -20,12 +23,10 @@
     "react-scripts": "5.0.1",
     "react-tailwindcss-datepicker": "^1.6.0",
     "tailwind-datepicker-react": "^1.3.0",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "@types/node": "^18.15.9",
-    "flowbite-typography": "^1.0.3",
     "tailwind-scrollbar": "^3.0.0",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "PORT=80 react-scripts start",
